--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,10 @@
 	name: Hank Quinlan, Horrible Cop
 	markdown: kramdown
 	permalink: /blog/:year/:month/:day/:title
+
+
+
+	navigation:
+  	- about: /about/
+  	- blog: /blog/
+  	- cv: /cv/
