--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Hank Quinlan's Horrible Cop Github!
+title: Hank Quinlan's Horrible Cop Github
 description: "A personal website about Hank Quinlan, the horrible cop."
 theme: minima
 
