--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Hank Quinlan's Horrible Cop Github
-description: "A personal website about Hank Quinlan, the horrible cop."
+title: Sydney Brutus's Github Website
+description: "A personal website about Sydney Brutus, the computer science senior."
 theme: minima
 
 baseurl: ""  # Leave this empty if your site is hosted at the root of your username.github.io
